Unit & E2E Test Infrastructure
- Repair gulp unit test task
- Repair gulp E2E test task
- Add service and filter test stubs

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "scripts": {
     "dev-install": "npm install && bower install && gulp config",
     "dev": "gulp server",
-    "ci-build": "npm install && bower install"
+    "ci-build": "npm install && bower install && gulp test-ci && gulp build"
   },
   "author": "Rise",
   "license": "ISC"
