--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gulp-autoprefixer": "~0.0.6",
     "gulp": "~3.6.0",
+    "gulp-util": "~2.2",
     "gulp-cache": "~0.1.3",
     "gulp-clean": "~0.2.4",
     "gulp-concat": "~2.2.0",
@@ -35,6 +36,7 @@
     "gulp-connect": "~2.0.5",
     "gulp-protractor": "~0.0.7",
     "gulp-html-replace": "git://github.com/settinghead/gulp-html-replace.git",
+    "gulp-replace": "~0.3.0",
     "protractor": "~0.23.1",
     "jshint-stylish": "^0.2.0"
   },
