Fix linting errors - Remove unused logic copied from store - Fix unit test for file listing

--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -19,6 +19,16 @@
     "browser" : false,
     "element" : false,
     "by" : false,
-    "Buffer": false
+    "Buffer": false,
+
+    /* angular */
+    "inject" : false,
+    "expect" : false,
+    "module" : false,
+    "Q" : false,
+    "console" : false,
+    "setTimeout": false
+
+    /* Test-specific globals */
   }
 }
