Add npm run command for local dist testing

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "scripts": {
     "dev-install": "npm install && bower install && gulp config",
     "dev": "gulp server",
+    "dist": "gulp server-dist", 
     "ci-build": "npm install && bower install && gulp config && gulp test-ci && gulp build"
   },
   "author": "Rise",
