--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
   "name": "rv-storage-client",
   "dependencies": {
-    "angular" : "1.2.6",
+    "angular": "1.2.6",
     "angular-mocks": "1.2.6",
     "angular-resource": "1.2.6",
     "angular-route": "1.2.6",
     "jQuery": "1.10.1",
-    "q": "1.0.1"
+    "q": "1.0.1",
+    "rise-vision-style-guide": "~0.2.0"
   }
 }
