--- a/.jshintrc
+++ b/.jshintrc
@@ -14,12 +14,12 @@
   "trailing"     : true,  // true: Prohibit trailing whitespaces
   "maxlen"       : 200,   // {int} Max number of characters per line
   // "indent"    : 2,     // {int} Number of spaces to use for indentation
-  "latedef"      : true,  // true: Require variables/functions to be defined before being used
+  "latedef"      : false,  // true: Require variables/functions to be defined before being used
   "curly"        : true,  // true: Require {} for every new block or scope
   "boss"         : false, // true: Tolerate assignments where comparisons would be expected
   "eqnull"       : true,  // true: Tolerate use of `== null`
   "eqeqeq"       : true,  // true: Require triple equals (===) for comparison
-  "expr"         : false, // true: Tolerate `ExpressionStatement` as Programs
+  "expr"         : true, // true: Tolerate `ExpressionStatement` as Programs
   "laxbreak"     : false, // true: Tolerate possibly unsafe line breakings
   "loopfunc"     : true,  // true: Tolerate functions being defined in loops
   "sub"          : true,  // true: Tolerate using `[]` notation when it can still be expressed in dot notation
@@ -39,7 +39,7 @@
   "globalstrict" : false, // true: Allow global "use strict" (also enables 'strict')
   "iterator"     : false, // true: Tolerate using the `__iterator__` property
   "lastsemic"    : false, // true: Tolerate omitting a semicolon for the last statement of a 1-line block
-  "laxcomma"     : false, // true: Tolerate comma-first style coding
+  "laxcomma"     : true, // true: Tolerate comma-first style coding
   "loopfunc"     : false, // true: Tolerate functions being defined in loops
   "multistr"     : false, // true: Tolerate multi-line strings
   "proto"        : false, // true: Tolerate using the `__proto__` property
